2002-01-11  Sam Steingold  <sds@gnu.org>

	* stream.d (add_to_open_streams): new function
	(make_file_stream, make_terminal_stream, make_printer_stream):
	 use it instead of in-line code
	From Todd Sabin <tas@webspan.net>

2002-01-10  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): --version: print *FEATURES*

2002-01-10  Sam Steingold  <sds@gnu.org>

	* package.d (cerror_package_locked): error-format-string: print
	func with ~A so that "DEFUN/DEFMACRO" is printed without quotes

2002-01-10  Sam Steingold  <sds@gnu.org>

	fixed a bug in the 2001-11-09 patch
	* pathname.d (CD): slashp expects a chart, not cint

2002-01-10  Sam Steingold  <sds@gnu.org>

	fixed (format nil "~2f" 1234567.1234) => "1234567."
	* format.lisp (format-float-for-f): pass 0 as DMIN to
	FORMAT-FLOAT-TO-STRING

2002-01-09  Sam Steingold  <sds@gnu.org>

	notice function redefinitions again
	* compiler.lisp (c-DEFUN): accept optional argument TYPE, to
	distinguish between DEFUN and DEFMETHOD (CURRENT-FUNCTION for
	top-level forms does not return anything useful)
	* clos.lisp (defmethod, defgeneric): pass the 4th argument to c-DEFUN

2002-01-09  Sam Steingold  <sds@gnu.org>

	fixed bug #501166
	* pathname.d (SUBDIR_PUSHSTACK): check for non-string subdir
	elements, do not return
	(subdir_namestring_parts): modified accordingly
	(use_default_dir): call simplify_directory
	(directory_search_scandir, directory_search): use SUBDIR_PUSHSTACK

2002-01-09  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (signature-to-list): do not intern ARG# symbols
	in SYSTEM
	(c-DEFUN): print signatures with ~A, not ~S, to avoid package prefixes

2002-01-08  Sam Steingold  <sds@gnu.org>

	* deprecated.lisp (deprecate): added optional DEF argument

2002-01-08  Sam Steingold  <sds@gnu.org>

	Implemented arbitrary package locking
	* lispbibl.d (Package): use bit(1) for package lock
	(mark_pack_locked, mark_pack_unlocked, pack_locked_p): new macros
	* package.d (cerror_package_locked): new function